syntax = "proto3";

package calculator;

option go_package="github.com/eldersoon/go-grpc/calculator/proto";

message SumRequest {
    int64 number1 = 1;
    int64 number2 = 2;
}

message SumResponse {
    int64 sum = 1;
}